--- a/theme.css
+++ b/theme.css
@@ -1035,6 +1035,11 @@ body.wysiwyg {
     line-height: 1.7em;
 }
 
+.news-legend img {
+    width: 15px !important;
+    height: 15px !important;
+}
+
 @media only screen
 and (max-device-width : 767px) {
 /* Styles */
